--- a/app.json
+++ b/app.json
@@ -60,6 +60,7 @@
   ],
   "usingComponents": {
     "t-demo": "../../components/demo-block/index",
+    "news-list": "../../components/news-list/index",
     "t-avatar": "tdesign-miniprogram/avatar/avatar",
     "t-avatar-group": "tdesign-miniprogram/avatar/avatar-group",
     "t-badge": "tdesign-miniprogram/badge/badge",
